# tui4all

./: .gitignore  LICENSE
go/monitor/: Readme.md  go.mod  go.sum  tui.go
go/simpletable/: go.mod
go/steam/: go.mod  go.sum  main.go
go/steam/api/: requests.go  structures.go
go/steam/tui/: tui.go
java/tui/: build.gradle  settings.gradle
java/tui/src/main/java/com/dataiku/devadv/tui/: TuiApplication.java
java/tui/src/main/java/com/dataiku/devadv/tui/command/: TuiApp.java  TuiBox.java  TuiList.java  TuiTable.java
java/tui/src/main/java/com/dataiku/devadv/tui/config/: SpringShellConfig.java
java/tui/src/main/java/com/dataiku/devadv/tui/data/: SampleData.java
java/tui/src/main/java/com/dataiku/devadv/tui/shell/: PromptColor.java  ShellHelper.java  TuiPromptProvider.java
java/tui/src/main/java/com/dataiku/devadv/tui/view/: TuiAppViewBuilder.java
java/tui/src/main/resources/: application.properties
python/: .gitignore  README.md  components.py  config.py.template  gitlab_helper.py  pyproject.toml  user.xml
python/dataiku/: components.py  config.py.template  main.py  tui.py
python/demo/: components.py  dss_helper.py  tui.py
python/gitlab/: tui.py  whats-next.py
rust/: Cargo.toml
rust/src/: app.rs  main.rs
